# cerebro

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md  cerebro.example.toml
.github/workflows/: ci.yml  release-prepare.yml  release-publish.yml  release.yml
src/: cli.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  model.rs
src/backends/: cron.rs  dnf.rs  docker.rs  firewalld.rs  mod.rs  os_release.rs  sockets.rs  tailscale.rs
src/engine/: audit.rs  drift.rs  firewall_ops.rs  inventory.rs  mod.rs  safety.rs
src/ssh/: mod.rs
src/web/: mod.rs
src/web/templates/: app.js  audit.html  base.html  host.html  overview.html  style.css
tests/: end_to_end.rs
