[package]
name = "cerebro"
version = "0.1.1-alpha.1"
edition = "2021"
rust-version = "1.96"
description = "Plug-and-play CLI + local web dashboard for managing and securing a fleet of Linux servers over Tailscale SSH"
authors = ["cerebro contributors"]
license = "Apache-2.0"
repository = "https://github.com/almeidx/cerebro"
readme = "README.md"
keywords = ["sysadmin", "firewall", "ssh", "tailscale", "fleet"]
categories = ["command-line-utilities"]

[[bin]]
name = "cerebro"
path = "src/main.rs"

[lib]
name = "cerebro"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
thiserror = "2.0.18"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
clap = { version = "4.6.1", features = ["derive", "env"] }
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "sync",
    "time",
    "signal",
    "fs",
    "io-util",
    "net",
] }
axum = "0.8.9"
tower = { version = "0.5.3", features = ["util"] }
minijinja = "2.21.0"
rust-embed = "8.11.0"
mime_guess = "2.0.5"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
similar = "3.1.1"
open = "5.3.5"
chrono = { version = "0.4.45", features = ["serde"] }

[dev-dependencies]
tempfile = "3.27.0"
http-body-util = "0.1.3"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
too_many_lines = "allow"
similar_names = "allow"
wildcard_imports = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
